# xrun

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: command_parser.rs  main.rs
tests/: integration_test.rs
tests/res/: basic.toml
