[package]
name = "srun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.8.19"
xdg = "2.5.2"

[dev-dependencies]
assert_cmd = "2.0.16"
rstest = "0.22.0"
tempfile = "3.12.0"
test-case = "3.3.1"
