[package]
name = "xrun"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.9.5"
xdg = "3.0.0"

[dev-dependencies]
assert_cmd = "2.0.17"
rstest = "0.26.1"
tempfile = "3.21.0"
test-case = "3.3.1"
